Implement reservationCancel
